@@ -72,6 +72,12 @@ filter.</p>
       to a <code>&lt;path&gt;</code> defined elsewhere..</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">prefix</td>
+    <td valign="top">Prefix to apply to loaded properties;
+      a "." is appended to the prefix if not specified. <em>Since Ant 1.8.1</em></td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h3>Parameters specified as nested elements</h3>
@@ -124,4 +130,3 @@ on the fly and load the contents as Ant properties.
 
 </body>
 </html>
-
