@@ -97,6 +97,50 @@ http.@SERVER@ = ${server}
       value="http://${server1.http.server}:${server1.http.port}"/>
   </target>
 
+  <target name="testLineCommentsWithoutFiltering">
+    <loadproperties>
+      <string value="#foo=bar" />
+    </loadproperties>
+    <au:assertFalse>
+      <isset property="foo" />
+    </au:assertFalse>
+  </target>
+
+  <target name="testPrefixAttributeProperties">
+    <loadproperties prefix="prefixFromAttribute.">
+      <string>foo=foo
+bar=bar
+baz=${foo} ${bar}
+      </string>
+    </loadproperties>
+    <au:assertTrue>
+      <and>
+        <equals arg1="foo" arg2="${prefixFromAttribute.foo}" />
+        <equals arg1="bar" arg2="${prefixFromAttribute.bar}" />
+        <equals arg1="foo bar" arg2="${prefixFromAttribute.baz}" />
+      </and>
+    </au:assertTrue>
+  </target>
+
+  <target name="testSelfContainedPrefixFilterFailure"
+          description="Show why the prefix attribute is needed">
+    <loadproperties>
+      <string>foo=foo
+bar=bar
+baz=${foo} ${bar}
+      </string>
+      <filterchain>
+        <prefixlines prefix="prefixFromFilter." />
+      </filterchain>
+    </loadproperties>
+    <au:assertTrue>
+      <and>
+        <equals arg1="$${foo} $${bar}" arg2="${prefixFromFilter.baz}" />
+        <isset property="prefixFromFilter." />
+      </and>
+    </au:assertTrue>
+  </target>
+
   <target name="write properties.tmp" depends="setUp">
     <echo file="${properties.tmp}">
 #tpfr.a=a
